# cw-qso-sim

./: Cargo.toml  Cross.toml  README.md  build-cross.sh  config.toml.example  led_find_ESP32.ino  paddle_debug_Arduino_Nano.ino  paddle_debug_Arduino_Uno.ino  paddle_debug_ESP32.ino  paddle_debug_ESP8266.ino  paddle_debug_pico2.ino
src/: config.rs  main.rs
src/audio/: cpal_backend.rs  mod.rs
src/i18n/: mod.rs
src/keyer/: attiny85.rs  keyboard.rs  mod.rs  nano.rs  pico2.rs  vband.rs  winkeyer.rs
src/morse/: decoder.rs  encoder.rs  mod.rs  timing.rs
src/qso/: callsigns.rs  engine.rs  exchanges.rs  mod.rs  state.rs
src/tui/: inner.rs  mod.rs
